; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/crypto/extr_kuhl_m_crypto_extractor.c_kuhl_m_crypto_extractor_bcrypt32_classic.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/crypto/extr_kuhl_m_crypto_extractor.c_kuhl_m_crypto_extractor_bcrypt32_classic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32*, i32* }

@KULL_M_MEMORY_GLOBAL_OWN_HANDLE = common dso_local global i32 0, align 4
@__const.kuhl_m_crypto_extractor_bcrypt32_classic.aLocalBuffer = private unnamed_addr constant %struct.TYPE_4__ { i32 0, i32* @KULL_M_MEMORY_GLOBAL_OWN_HANDLE, i32* null }, align 8
@.str = private unnamed_addr constant [5 x i32] [i32 37, i32 115, i32 58, i32 32, i32 0], align 4
@LPTR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i32] [i32 10, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kuhl_m_crypto_extractor_bcrypt32_classic(i32* %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__, align 8
  %10 = alloca %struct.TYPE_4__, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %12 = load i64, i64* %6, align 8
  %13 = call i32* @ULongToPtr(i64 %12)
  %14 = ptrtoint i32* %13 to i32
  store i32 %14, i32* %11, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  %16 = load i32*, i32** %5, align 8
  store i32* %16, i32** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 2
  store i32* null, i32** %17, align 8
  %18 = bitcast %struct.TYPE_4__* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %18, i8* align 8 bitcast (%struct.TYPE_4__* @__const.kuhl_m_crypto_extractor_bcrypt32_classic.aLocalBuffer to i8*), i64 24, i1 false)
  %19 = load i64, i64* %6, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %47

21:                                               ; preds = %4
  %22 = load i32, i32* %7, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %47

24:                                               ; preds = %21
  %25 = load i32, i32* %8, align 4
  %26 = call i32 (i8*, ...) @kprintf(i8* bitcast ([5 x i32]* @.str to i8*), i32 %25)
  %27 = load i32, i32* @LPTR, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @LocalAlloc(i32 %27, i32 %28)
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  store i32 %29, i32* %30, align 8
  %31 = icmp ne i32 %29, 0
  br i1 %31, label %32, label %45

32:                                               ; preds = %24
  %33 = load i32, i32* %7, align 4
  %34 = call i64 @kull_m_memory_copy(%struct.TYPE_4__* %10, %struct.TYPE_4__* %9, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %41

36:                                               ; preds = %32
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load i32, i32* %7, align 4
  %40 = call i32 @kull_m_string_wprintf_hex(i32 %38, i32 %39, i32 0)
  br label %41

41:                                               ; preds = %36, %32
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @LocalFree(i32 %43)
  br label %45

45:                                               ; preds = %41, %24
  %46 = call i32 (i8*, ...) @kprintf(i8* bitcast ([2 x i32]* @.str.1 to i8*))
  br label %47

47:                                               ; preds = %45, %21, %4
  ret void
}

declare dso_local i32* @ULongToPtr(i64) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @kprintf(i8*, ...) #1

declare dso_local i32 @LocalAlloc(i32, i32) #1

declare dso_local i64 @kull_m_memory_copy(%struct.TYPE_4__*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @kull_m_string_wprintf_hex(i32, i32, i32) #1

declare dso_local i32 @LocalFree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
